--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/octane": "^1.3",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "propaganistas/laravel-phone": "^4.4",
         "spiral/roadrunner": "^2.8.2"
     },
     "require-dev": {
